Show validation tags on table. Try to fix c.hgvs wrapping for the 100th time

--- a/variantgrid/static_files/default_static/css/global_bs.scss
+++ b/variantgrid/static_files/default_static/css/global_bs.scss
@@ -1139,8 +1139,11 @@ a .c-hgvs-body {
 }
 
 .c-hgvs-body {
-  .c-hgvs-transcript, .c-hgvs-nomen, .c-hgvs-gene-symbol-b {
+  .c-hgvs-transcript, .c-hgvs-gene-symbol-b {
     white-space: nowrap;
+    word-break: normal;
+  }
+  .c-hgvs-nomen {
     word-break: normal;
   }
   .c-hgvs-gene-symbol {
